--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="layer">
                         <h3>IoT Project</h3>
                         <p>I have worked on Smart Agriculture System using Node MCU, Soil Moisture sensor, Ph level detector.</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://drive.google.com/file/d/14dVhb_1QPMoaFB631m0m0t3uPAulJuFp/view?usp=drive_link"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
 
